--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -63,6 +63,9 @@ jobs:
       fail-fast: false
       matrix:
         compiler:
+          - name: "Clang 16"
+            cxx: clang++-16
+            os: ubuntu-24.04
           - name: "Clang 17"
             cxx: clang++-17
             os: ubuntu-24.04
