--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -99,7 +99,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Clang
-        if: startsWith(matrix.compiler.cxx, 'clang')
+        if: startsWith(matrix.compiler.cxx, 'clang') && matrix.compiler.cxx != 'clang++-16'
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x ./llvm.sh
