--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -145,7 +145,9 @@ jobs:
         run: make test -j4
 
       - name: Stage 1 - Integration Test
-        run: prove -v -j4 --shuffle tests/[0-9]*.sh
+        run: find tests -maxdepth 1 -name '[0-9]*.sh' -exec sh {} -v \;
+        env:
+          CABIN_TERM_COLOR: auto
 
       - name: Stage 2 - Build & Test
         run: ./build/cabin --verbose run test --verbose
@@ -154,9 +156,10 @@ jobs:
         run: ./cabin-out/debug/cabin version --verbose
 
       - name: Stage 2 - Integration Test
-        run: prove -v -j4 --shuffle tests/[0-9]*.sh
+        run: find tests -maxdepth 1 -name '[0-9]*.sh' -exec sh {} -v \;
         env:
           CABIN_BIN: ${{ github.workspace }}/cabin-out/debug/cabin
+          CABIN_TERM_COLOR: auto
 
       # - name: Print coverage
       #   if: success() && matrix.coverage == 'on'
