Build: support always build compdb option
fixes #1037

--- a/cabin.toml
+++ b/cabin.toml
@@ -22,6 +22,9 @@ tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
 [profile]
 cxxflags = ["-pedantic-errors", "-Wall", "-Wextra", "-Wpedantic"]
 
+[profile.dev]
+comp_db = true  # always build comp DB on dev
+
 [profile.release]
 lto = true
 
