--- a/cabin.toml
+++ b/cabin.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 name = "cabin"
 readme = "README.md"
 repository = "https://github.com/cabinpkg/cabin"
-version = "0.11.1"
+version = "0.12.0-dev"
 
 [dependencies]
 toml11 = {git = "https://github.com/ToruNiina/toml11.git", tag = "v4.2.0"}
