Makefile: disable RTTI

--- a/cabin.toml
+++ b/cabin.toml
@@ -20,7 +20,7 @@ nlohmann_json = {version = "3.10.5", system = true}
 tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
 
 [profile]
-cxxflags = ["-pedantic-errors", "-Wall", "-Wextra", "-Wpedantic"]
+cxxflags = ["-pedantic-errors", "-Wall", "-Wextra", "-Wpedantic", "-fno-rtti"]
 
 [profile.dev]
 comp-db = true  # always build comp DB on dev
