added spdlog for CI

--- a/.github/actions/setup-macos-deps/action.yml
+++ b/.github/actions/setup-macos-deps/action.yml
@@ -9,6 +9,7 @@ runs:
         brew install \
           curl \
           fmt \
+          spdlog \
           libgit2 \
           nlohmann-json \
           tbb
