--- a/.github/actions/setup-ubuntu-deps/action.yml
+++ b/.github/actions/setup-ubuntu-deps/action.yml
@@ -10,6 +10,7 @@ runs:
         sudo apt-get install -y \
           libcurl4-openssl-dev \
           libfmt-dev \
+          libspdlog-dev \
           libgit2-dev \
           nlohmann-json3-dev \
           libtbb-dev
