--- a/cabin.toml
+++ b/cabin.toml
@@ -24,7 +24,7 @@ tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
 cxxflags = ["-pedantic-errors", "-Wall", "-Wextra", "-Wpedantic", "-fno-rtti"]
 
 [profile.dev]
-comp-db = true  # always build comp DB on dev
+compdb = true  # always build comp DB on dev
 
 [profile.release]
 lto = true
