ci(cpp): use include

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -13,53 +13,53 @@ permissions:
 
 jobs:
   build-and-test:
-    name: "build & test (${{ matrix.cxx.name }} - ${{ matrix.build }})"
-    runs-on: ${{ matrix.cxx.os }}
+    name: "build & test (${{ matrix.name }} - ${{ matrix.build }})"
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         build: [dev, release]
-        cxx:
+        include:
           - name: "Clang 16"
-            cmd: clang++-16
+            cxx: clang++-16
             os: ubuntu-24.04
           - name: "Clang 17"
-            cmd: clang++-17
+            cxx: clang++-17
             os: ubuntu-24.04
           - name: "Clang 18"
-            cmd: clang++-18
+            cxx: clang++-18
             os: ubuntu-24.04
           - name: "Clang 19"
-            cmd: clang++-19
+            cxx: clang++-19
             os: ubuntu-24.04
           - name: "Clang 20"
-            cmd: clang++-20
+            cxx: clang++-20
             os: ubuntu-24.04
           - name: "GCC 12"
-            cmd: g++-12
+            cxx: g++-12
             os: ubuntu-24.04
           - name: "GCC 13"
-            cmd: g++-13
+            cxx: g++-13
             os: ubuntu-24.04
           - name: "GCC 14"
-            cmd: g++-14
+            cxx: g++-14
             os: ubuntu-24.04
           - name: "Apple Clang - macOS 13"
-            cmd: c++
+            cxx: c++
             os: macos-13
           - name: "Apple Clang - macOS 14"
-            cmd: c++
+            cxx: c++
             os: macos-14
           - name: "Apple Clang - macOS 15"
-            cmd: c++
+            cxx: c++
             os: macos-15
     env:
-      CXX: ${{ matrix.cxx.cmd }}
+      CXX: ${{ matrix.cxx }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Clang
-        if: matrix.cxx.cmd == 'clang++-19' || matrix.cxx.cmd == 'clang++-20'
+        if: matrix.cxx == 'clang++-19' || matrix.cxx == 'clang++-20'
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x ./llvm.sh
