chore(release): support deb & rpm, close #1206

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -10,17 +10,58 @@ permissions:
 
 jobs:
   auto-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Ubuntu dependencies
+        uses: ./.github/actions/setup-ubuntu-deps
+
+      - name: Build cabin
+        run: make BUILD=release -j4
+        env:
+          CXX: g++-14
+
+      - name: Install nFPM
+        run: |
+          echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
+          sudo apt-get update
+          sudo apt-get install -y nfpm
+
+      - name: Create DEB package
+        run: nfpm pkg --packager deb
+        env:
+          CABIN_VERSION: ${{ github.ref_name }}
+
+      - name: Create RPM package
+        run: nfpm pkg --packager rpm
+        env:
+          CABIN_VERSION: ${{ github.ref_name }}
 
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           draft: false
           generate_release_notes: true
+          files: |
+            *.deb
+            *.rpm
           body: |
             :sparkling_heart: I maintain **Cabin** in my spare time. Buy me a coffee on [GitHub Sponsors](https://github.com/sponsors/ken-matsui) so I can keep shipping features!
+
+            ## Installation
+
+            ### Ubuntu/Debian
+            ```bash
+            wget https://github.com/cabinpkg/cabin/releases/download/${{ github.ref_name }}/cabin_${{ github.ref_name }}_amd64.deb
+            sudo dpkg -i cabin_${{ github.ref_name }}_amd64.deb
+            ```
+
+            ### RHEL/CentOS/Fedora
+            ```bash
+            wget https://github.com/cabinpkg/cabin/releases/download/${{ github.ref_name }}/cabin-${{ github.ref_name }}-1.x86_64.rpm
+            sudo rpm -i cabin-${{ github.ref_name }}-1.x86_64.rpm
+            ```
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
