feat!: migrate internal build system to Ninja, always generate compdb, use run-clang-tidy for tidy

--- a/.github/actions/setup-macos-deps/action.yml
+++ b/.github/actions/setup-macos-deps/action.yml
@@ -11,6 +11,7 @@ runs:
           fmt \
           spdlog \
           libgit2 \
+          ninja \
           nlohmann-json \
           tbb
       shell: "bash"
