--- a/.github/actions/setup-ubuntu-deps/action.yml
+++ b/.github/actions/setup-ubuntu-deps/action.yml
@@ -12,6 +12,7 @@ runs:
           libfmt-dev \
           libspdlog-dev \
           libgit2-dev \
+          ninja-build \
           nlohmann-json3-dev \
           libtbb-dev
       shell: "bash"
