ci(cpp): install wget

--- a/.github/actions/setup-ubuntu-deps/action.yml
+++ b/.github/actions/setup-ubuntu-deps/action.yml
@@ -8,6 +8,7 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
+          wget \
           libcurl4-openssl-dev \
           libfmt-dev \
           libspdlog-dev \
